# gemm-from-scratch

./: .gitignore  CMakeLists.txt  README.md  main.cpp
benchmarks/: gemm_benchmark.cpp
bindings/: gemm_bindings.cpp
include/: gemm.hpp
scripts/: benchmark_python.py
src/: gemm_naive.cpp  gemm_neon.cpp  gemm_omp.cpp  gemm_tiled.cpp  main.cpp
